--- a/indi_allsky/flask/templates/base.html
+++ b/indi_allsky/flask/templates/base.html
@@ -171,7 +171,7 @@
                 </div>
             </div>
         </div>
-        <div class="col d-flex flex-column h-sm-100">
+        <div class="col-xl col-9 d-flex flex-column h-sm-100">
             <main class="row vh-100 overflow-auto">
                 <div class="col pt-4">
                   {% block content %}{% endblock %}
