validation for ads1x15 config

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4196,7 +4196,8 @@
         </div>
         <div class="col-sm-8">
             <div>Example: D5 (GPIO5 / Pin 29 Raspi)</div>
-            <div>Unused for i2c devices</div>
+            <div>Example: P0 - Pin for ADS1x15 ADC</div>
+            <div>Unused for most i2c devices</div>
         </div>
     </div>
 
@@ -4250,7 +4251,8 @@
         </div>
         <div class="col-sm-8">
             <div>Example: D6 (GPIO6 / Pin 31 Raspi)</div>
-            <div>Unused for i2c devices</div>
+            <div>Example: P0 - Pin for ADS1x15 ADC</div>
+            <div>Unused for most i2c devices</div>
         </div>
     </div>
 
@@ -4304,7 +4306,8 @@
         </div>
         <div class="col-sm-8">
             <div>Example: D16 (GPIO16 / Pin 36 Raspi)</div>
-            <div>Unused for i2c devices</div>
+            <div>Example: P0 - Pin for ADS1x15 ADC</div>
+            <div>Unused for most i2c devices</div>
         </div>
     </div>
 
