--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2879,6 +2879,18 @@
         </div>
     </div>
 
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_4.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-3">
+            {{ form_config.CHARTS__CUSTOM_SLOT_4(class='form-select bg-secondary') }}
+            <div id="CHARTS__CUSTOM_SLOT_4-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-7">
+        </div>
+    </div>
+
     <hr>
 
     <div class="form-group row">
@@ -4962,6 +4974,7 @@ const field_names = [
     'CHARTS__CUSTOM_SLOT_1',
     'CHARTS__CUSTOM_SLOT_2',
     'CHARTS__CUSTOM_SLOT_3',
+    'CHARTS__CUSTOM_SLOT_4',
     'CLAHE_CLIPLIMIT',
     'CLAHE_GRIDSIZE',
     'IMAGE_STRETCH__MODE1_GAMMA',
