--- a/indi_allsky/flask/templates/loop.html
+++ b/indi_allsky/flask/templates/loop.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 <style>
 .loader {
-  display: none;
+  display: block;
   border: 3px solid #f3f3f3;
   border-top: 4px solid #3498db;
   border-radius: 50%;
