--- a/indi_allsky/flask/templates/chart.html
+++ b/indi_allsky/flask/templates/chart.html
@@ -326,7 +326,7 @@ function init() {
         type: "line",
         data: {
             datasets: [{
-                label: 'Custom 1',
+                label: '{{ label_custom_chart_1 }}',
                 backgroundColor: "rgba(128, 0, 0, 1)",
                 borderColor: "rgba(92, 0, 0, 1)",
                 tension: 0.1,
@@ -369,7 +369,7 @@ function init() {
         type: "line",
         data: {
             datasets: [{
-                label: 'Custom 2',
+                label: '{{ label_custom_chart_2 }}',
                 backgroundColor: "rgba(0, 128, 0, 1)",
                 borderColor: "rgba(0, 92, 0, 1)",
                 tension: 0.1,
@@ -412,7 +412,7 @@ function init() {
         type: "line",
         data: {
             datasets: [{
-                label: 'Custom 3',
+                label: '{{ label_custom_chart_3 }}',
                 backgroundColor: "rgba(0, 0, 128, 1)",
                 borderColor: "rgba(0, 0, 92, 1)",
                 tension: 0.1,
@@ -455,7 +455,7 @@ function init() {
         type: "line",
         data: {
             datasets: [{
-                label: 'Custom 4',
+                label: '{{ label_custom_chart_4 }}',
                 backgroundColor: "rgba(128, 128, 0, 1)",
                 borderColor: "rgba(92, 92, 0, 1)",
                 tension: 0.1,
