add config description

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4625,6 +4625,7 @@
             <div id="GENERIC_GPIO__A_CLASSNAME-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">
+            <div>Activates a device/pin at night and off during day (or reversed)</div>
         </div>
     </div>
 
