add note about charts

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4237,6 +4237,10 @@
 
     <hr>
 
+    <div><span class="badge rounded-pill bg-info text-dark">Note</span> Additional graphs may be configured for sensor values on the Admin Tab</div>
+
+    <hr>
+
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.TEMP_SENSOR__A_CLASSNAME.label(class='col-form-label') }}
