add label to form values

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4259,7 +4259,7 @@
             {{ form_config.TEMP_SENSOR__A_LABEL.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_config.TEMP_SENSOR__A_LABEl(class='form-control bg-secondary') }}
+            {{ form_config.TEMP_SENSOR__A_LABEL(class='form-control bg-secondary') }}
             <div id="TEMP_SENSOR__A_LABEL-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
@@ -4326,7 +4326,7 @@
             {{ form_config.TEMP_SENSOR__B_LABEL.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_config.TEMP_SENSOR__B_LABEl(class='form-control bg-secondary') }}
+            {{ form_config.TEMP_SENSOR__B_LABEL(class='form-control bg-secondary') }}
             <div id="TEMP_SENSOR__B_LABEL-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
@@ -4393,7 +4393,7 @@
             {{ form_config.TEMP_SENSOR__C_LABEL.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
-            {{ form_config.TEMP_SENSOR__C_LABEl(class='form-control bg-secondary') }}
+            {{ form_config.TEMP_SENSOR__C_LABEL(class='form-control bg-secondary') }}
             <div id="TEMP_SENSOR__C_LABEL-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
