--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -380,7 +380,10 @@
             {{ form_config.TEMP_DISPLAY(class='form-select bg-secondary') }}
             <div id="TEMP_DISPLAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8">Temperature units for display</div>
+        <div class="col-sm-8">
+            <div>Temperature units for display</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> Adjusts sensor units.</div>
+        </div>
     </div>
 
     <div class="form-group row">
@@ -4254,6 +4257,10 @@
 
     <hr>
 
+    <div><span class="badge rounded-pill bg-info text-dark">Note</span> Sensor units may be adjusted using the Temperature Display option on the Camera Tab</div>
+
+    <hr>
+
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.TEMP_SENSOR__A_CLASSNAME.label(class='col-form-label') }}
@@ -4679,6 +4686,10 @@
     <hr>
 
     <div><span class="badge rounded-pill bg-info text-dark">Note</span> Hardware Device support requires the Adafruit-Blinka module</div>
+
+    <hr>
+
+    <div><span class="badge rounded-pill bg-info text-dark">Note</span> Sensor units may be in either Celcius or Fahrenheit based on the Temperature Display option on the Camera Tab</div>
 
     <hr>
 
